force-app/main/default/objects/Visit__c/fields/Audio_Transcript__c.field-meta.xml
<CustomField>
    <fullName>Audio_Transcript__c</fullName>
    <description>Raw, unedited voice transcript captured from the field sales executive&apos;s dictation via the Visit Logger mobile component. This preserves the original speech-to-text output before AI summarization. The cleaned summary is stored in Visit Notes.</description>
    <label>Audio Transcript</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>