force-app/main/default/objects/Visit__c/fields/Visit_Notes_Summary__c.field-meta.xml
<CustomField>
    <fullName>Visit_Notes_Summary__c</fullName>
    <description>AI generated Summary of the Visit Notes</description>
    <label>Visit Notes Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>