force-app/main/default/objects/Visit__c/fields/Visit_Type__c.field-meta.xml
<CustomField>
    <fullName>Visit_Type__c</fullName>
    <label>Visit Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Meeting</fullName>
                <default>true</default>
                <label>Meeting</label>
            </value>
            <value>
                <fullName>Revisit</fullName>
            </value>
            <value>
                <fullName>In-Clinic</fullName>
            </value>
            <value>
                <fullName>Routine Calls</fullName>
            </value>
            <value>
                <fullName>Feedback Calls</fullName>
            </value>
            <value>
                <fullName>Product Sampling</fullName>
            </value>
            <value>
                <fullName>Relationship Building</fullName>
            </value>
            <value>
                <fullName>Demonstration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>