force-app/main/default/objects/Visit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Doctor__c</columns>
    <columns>Visit_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Provider__c</columns>
    <columns>Sales_Rep__c</columns>
    <columns>Status__c</columns>
    <columns>Visit_Notes__c</columns>
    <columns>Visit_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>